--- a/app/src/main/res/layout/activity_signup_organizer.xml
+++ b/app/src/main/res/layout/activity_signup_organizer.xml
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/username_player2" />
 
     <EditText
-        android:id="@+id/textUsername"
+        android:id="@+id/username"
         android:layout_width="147dp"
         android:layout_height="33dp"
         android:ems="10"
@@ -121,4 +121,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/registerQn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="58dp"
+        android:gravity="center"
+        android:text="have an account? Login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup_player" />
 </androidx.constraintlayout.widget.ConstraintLayout>
