--- a/app/src/main/res/layout/activity_login_player.xml
+++ b/app/src/main/res/layout/activity_login_player.xml
@@ -1,97 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wallpaper"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:layout_margin="20dp"
     tools:context=".login_player">
 
-    <TextView
-        android:id="@+id/T_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="212dp"
-        android:hint="@string/login"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/password_player"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="32dp"
-        android:hint="@string/password"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_player" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="152dp"
-        android:layout_height="30dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="12sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/username_player"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.237"
-        app:layout_constraintStart_toEndOf="@+id/username_player" />
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter Email"
+        android:textColor="#000"
+        android:textSize="20sp"
+        android:layout_margin="5dp"
+        android:inputType="textEmailAddress"
+        android:textColorHint="#000"
+        />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter password"
+        android:textColor="#000"
+        android:layout_margin="5dp"
+        android:inputType="textPassword"
+        android:textSize="20sp"
+        android:textColorHint="#000"
+        />
 
     <Button
-        android:id="@+id/login_player"
-        android:layout_width="wrap_content"
+        android:id="@+id/loginBtn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="48dp"
-        android:hint="@string/login"
-        android:onClick="user_home"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_player" />
+        android:textAllCaps="false"
+        android:layout_margin="5dp"
+        android:text="Login"/>
 
     <TextView
-        android:id="@+id/player_signup"
-        android:layout_width="wrap_content"
+        android:id="@+id/loginQn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:hint="@string/signup"
-        android:onClick="plyr_signup"
-        app:layout_constraintBaseline_toBaselineOf="@+id/createanaccount"
-        app:layout_constraintStart_toEndOf="@+id/createanaccount" />
+        android:text="Dont have an account, signUp"
+        android:gravity="center"/>
 
-    <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="149dp"
-        android:layout_height="32dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        app:layout_constraintBaseline_toBaselineOf="@+id/password_player"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.238"
-        app:layout_constraintStart_toEndOf="@+id/password_player" />
 
-    <TextView
-        android:id="@+id/createanaccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="20dp"
-        android:text="Create an Account"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_player" />
 
-    <TextView
-        android:id="@+id/username_player"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="60dp"
-        android:hint="@string/username"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/T_login" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
