--- a/app/src/main/res/layout/activity_tournament_update.xml
+++ b/app/src/main/res/layout/activity_tournament_update.xml
@@ -109,7 +109,7 @@
     <!-- nav bar ends -->
 
     <TextView
-        android:id="@+id/textView37"
+        android:id="@+id/textgamename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -120,10 +120,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/cr_tournamet_topic6"
+        android:id="@+id/texttname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="168dp"
         android:layout_marginTop="80dp"
         android:fontFamily="sans-serif"
         android:text="@string/tournament_31"
@@ -133,7 +133,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Btn_create"
+        android:id="@+id/Btn_update"
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:layout_marginStart="52dp"
@@ -202,7 +202,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/TournamentName"
         android:layout_width="213dp"
         android:layout_height="35dp"
         android:layout_marginStart="60dp"
@@ -215,7 +215,7 @@
         app:layout_constraintTop_toBottomOf="@+id/t_bracket" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/tType"
         android:layout_width="125dp"
         android:layout_height="34dp"
         android:layout_marginStart="64dp"
@@ -228,7 +228,7 @@
         app:layout_constraintTop_toBottomOf="@+id/t_bracket" />
 
     <EditText
-        android:id="@+id/editTextDate"
+        android:id="@+id/tDate"
         android:layout_width="125dp"
         android:layout_height="35dp"
         android:layout_marginStart="64dp"
@@ -241,7 +241,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <EditText
-        android:id="@+id/editTextTime"
+        android:id="@+id/tTime"
         android:layout_width="88dp"
         android:layout_height="35dp"
         android:layout_marginStart="76dp"
@@ -251,7 +251,7 @@
         android:inputType="time"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextDate" />
+        app:layout_constraintStart_toEndOf="@+id/tDate" />
 
     <Button
         android:id="@+id/button2"
@@ -267,7 +267,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <Button
-        android:id="@+id/Btn_cancel"
+        android:id="@+id/Btn_UCancel"
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:layout_marginStart="232dp"
