--- a/app/src/main/res/layout/activity_match_org_update.xml
+++ b/app/src/main/res/layout/activity_match_org_update.xml
@@ -128,32 +128,8 @@
 
     <!-- nav bar ends -->
 
-    <Spinner
-        android:id="@+id/mteamA"
-        android:layout_width="149dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="8dp"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.245"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t_teamA" />
-
-    <Spinner
-        android:id="@+id/mteamB"
-        android:layout_width="149dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="12dp"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.278"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t_teamB" />
-
     <Button
-        android:id="@+id/Btn_create"
+        android:id="@+id/Btn_Mupdate"
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:layout_marginStart="60dp"
@@ -161,10 +137,10 @@
         android:backgroundTint="@color/grey"
         android:hint="@string/user_Update"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mtime" />
+        app:layout_constraintTop_toBottomOf="@+id/mUtime" />
 
     <Button
-        android:id="@+id/Btn_delete"
+        android:id="@+id/Btn_MUdelete"
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:layout_marginTop="8dp"
@@ -173,7 +149,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Btn_create"
+        app:layout_constraintTop_toBottomOf="@+id/Btn_Mupdate"
         app:layout_constraintVertical_bias="0.058" />
 
     <TextView
@@ -186,7 +162,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mround" />
+        app:layout_constraintTop_toBottomOf="@+id/mUround" />
 
     <TextView
         android:id="@+id/t_teamA"
@@ -265,20 +241,49 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t_bracket" />
 
+    <EditText
+        android:id="@+id/mUteamA"
+        android:layout_width="213dp"
+        android:layout_height="35dp"
+        android:ems="10"
+        android:hint="@string/tournament_name"
+        android:inputType="textPersonName"
+        android:text="Bracket"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.377"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/t_teamA" />
+
+    <EditText
+        android:id="@+id/mUteamB"
+        android:layout_width="213dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:hint="@string/tournament_name"
+        android:inputType="textPersonName"
+        android:text="Bracket"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/t_teamB" />
+
     <Button
-        android:id="@+id/Btn_cancel"
+        android:id="@+id/Btn_MUcancel"
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:backgroundTint="@color/grey"
         android:hint="@string/cancel"
         android:textColor="@color/black"
-        app:layout_constraintBaseline_toBaselineOf="@+id/Btn_create"
+        app:layout_constraintBaseline_toBaselineOf="@+id/Btn_Mupdate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toEndOf="@+id/Btn_create" />
+        app:layout_constraintStart_toEndOf="@+id/Btn_Mupdate" />
 
     <EditText
-        android:id="@+id/mround"
+        android:id="@+id/mUround"
         android:layout_width="101dp"
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
@@ -295,7 +300,6 @@
         android:id="@+id/TV_teamAScore"
         android:layout_width="101dp"
         android:layout_height="36dp"
-        android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/team_a_scores"
@@ -303,13 +307,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.205"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mteamA" />
+        app:layout_constraintTop_toBottomOf="@+id/mUteamA" />
 
     <EditText
         android:id="@+id/TV_teamBScore2"
         android:layout_width="101dp"
         android:layout_height="36dp"
-        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/team_b_scores"
@@ -317,10 +320,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.232"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mteamB" />
+        app:layout_constraintTop_toBottomOf="@+id/mUteamB" />
 
     <EditText
-        android:id="@+id/mtime"
+        android:id="@+id/mUtime"
         android:layout_width="136dp"
         android:layout_height="35dp"
         android:layout_marginStart="72dp"
@@ -337,7 +340,7 @@
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:inputType="time"
-        app:layout_constraintBaseline_toBaselineOf="@+id/mtime"
+        app:layout_constraintBaseline_toBaselineOf="@+id/mUtime"
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
