--- a/app/src/main/res/layout/activity_tournament_create.xml
+++ b/app/src/main/res/layout/activity_tournament_create.xml
@@ -109,7 +109,7 @@
     <!-- nav bar ends -->
 
     <Button
-        android:id="@+id/Btn_create"
+        android:id="@+id/Btn_Mupdate"
         android:layout_width="103dp"
         android:layout_height="48dp"
         android:layout_marginStart="52dp"
@@ -264,7 +264,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <Button
-        android:id="@+id/Btn_cancel"
+        android:id="@+id/Btn_MUcancel"
         android:layout_width="103dp"
         android:layout_height="48dp"
         android:layout_marginStart="260dp"
