--- a/app/src/main/res/layout/activity_tournament_update.xml
+++ b/app/src/main/res/layout/activity_tournament_update.xml
@@ -133,7 +133,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/Btn_update"
+        android:id="@+id/Btn_Mupdate"
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:layout_marginStart="52dp"
