Updated again (team)

--- a/app/src/main/res/layout/activity_team_home.xml
+++ b/app/src/main/res/layout/activity_team_home.xml
@@ -144,53 +144,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="360dp"
-        android:layout_height="116dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:onClick="user_team_managepage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic7">
 
-        <ImageView
-            android:id="@+id/Teamimage"
-            android:layout_width="121dp"
-            android:layout_height="91dp"
-            android:layout_marginVertical="13dp"
-            android:onClick="user_team_managepage"
-            app:srcCompat="@drawable/codenamealpha" />
-
-        <TextView
-            android:id="@+id/playernum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="40dp"
-            android:layout_marginStart="156dp"
-            android:text="@string/num_pl_20"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/teamname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
-            android:layout_marginStart="156dp"
-            android:layout_marginTop="4dp"
-            android:onClick="user_team_managepage"
-            android:text="@string/code_name_alpha"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/matchcount"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:layout_marginVertical="60dp"
-            android:layout_marginStart="156dp"
-            android:text="@string/maches_won20"
-            android:textSize="12sp" />
-    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/cr_tournamet_topic7"
@@ -216,13 +170,25 @@
 
     </SearchView>
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="400dp"
+        android:layout_marginBottom="60dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="403dp" />
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
     <androidx.cardview.widget.CardView
         android:layout_width="345dp"
         android:layout_height="106dp"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="44dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView3">
+        tools:layout_editor_absoluteX="24dp"
+        tools:layout_editor_absoluteY="220dp">
 
         <TextView
             android:id="@+id/textView7"
@@ -244,59 +210,5 @@
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView3"
-        android:layout_width="360dp"
-        android:layout_height="116dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2">
-
-        <ImageView
-            android:id="@+id/Team2image"
-            android:layout_width="121dp"
-            android:layout_height="91dp"
-            android:layout_marginVertical="13dp"
-            app:srcCompat="@drawable/red" />
-
-        <TextView
-            android:id="@+id/playernum1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="40dp"
-            android:layout_marginStart="156dp"
-            android:text="@string/num_pl_20"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/teamname2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
-            android:layout_marginStart="156dp"
-            android:layout_marginTop="4dp"
-            android:text="@string/shadow"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/matchcount1"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginVertical="60dp"
-            android:layout_marginStart="156dp"
-            android:text="@string/maches_won20"
-            android:textSize="12sp" />
-
-        <Button
-            android:id="@+id/button13"
-            android:layout_width="92dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="196dp"
-            android:onClick="user_team_create"
-            android:text="Delete" />
-
-    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
