--- a/app/src/main/res/layout/activity_match_org_create.xml
+++ b/app/src/main/res/layout/activity_match_org_create.xml
@@ -142,50 +142,40 @@
         app:layout_constraintVertical_bias="0.101" />
 
     <TextView
-        android:id="@+id/t_bracket"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/brackets_ws"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mUround" />
-
-    <TextView
         android:id="@+id/t_teamA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:text="@string/teama"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintHorizontal_bias="0.162"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/mUround" />
 
     <TextView
         android:id="@+id/t_teamB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="@string/teamb"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintHorizontal_bias="0.162"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="318dp" />
+        app:layout_constraintTop_toBottomOf="@+id/mUteamA" />
 
     <TextView
         android:id="@+id/t_startdateandtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/start_d_t"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.197"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="414dp" />
+        app:layout_constraintTop_toBottomOf="@+id/mUteamB" />
 
     <TextView
         android:id="@+id/cr_tournamet_topic"
@@ -205,7 +195,7 @@
         android:id="@+id/t_round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="64dp"
         android:text="@string/round"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -214,29 +204,13 @@
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="213dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="@string/tournament_name"
-        android:inputType="textPersonName"
-        android:text="Bracket"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t_bracket" />
-
-    <EditText
         android:id="@+id/mUteamA"
         android:layout_width="213dp"
         android:layout_height="35dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="@string/tournament_name"
+        android:hint="@string/teama"
         android:inputType="textPersonName"
-        android:text="Team A"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -249,9 +223,8 @@
         android:layout_height="35dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="@string/tournament_name"
+        android:hint="@string/teamb"
         android:inputType="textPersonName"
-        android:text="Team B"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -292,17 +265,8 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="date"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t_startdateandtime" />
-
-    <EditText
-        android:id="@+id/editTextTime2"
-        android:layout_width="139dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:inputType="time"
-        app:layout_constraintBaseline_toBaselineOf="@+id/mUtime"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
