--- a/app/src/main/res/layout/activity_match_org_list.xml
+++ b/app/src/main/res/layout/activity_match_org_list.xml
@@ -129,17 +129,17 @@
     <!-- nav bar ends -->
 
 
-    <TextView
-        android:id="@+id/match_org_list_h_round1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:hint="@string/round1"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_new_match" />
+<!--    <TextView-->
+<!--        android:id="@+id/match_org_list_round1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="32dp"-->
 
+<!--        android:textSize="16sp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/add_new_match" />-->
 
+<!--&lt;!&ndash;    android:hint="@string/round1"&ndash;&gt;-->
     <TextView
         android:id="@+id/match_org_list_h_matches"
         android:layout_width="wrap_content"
