--- a/app/src/main/res/layout/activity_match_org_update.xml
+++ b/app/src/main/res/layout/activity_match_org_update.xml
@@ -139,42 +139,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mUtime" />
 
-    <Button
-        android:id="@+id/Btn_MUdelete"
-        android:layout_width="103dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@color/grey"
-        android:hint="@string/delete"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Btn_Mupdate"
-        app:layout_constraintVertical_bias="0.058" />
-
-    <TextView
-        android:id="@+id/t_bracket"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/brackets_ws"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mUround" />
-
     <TextView
         android:id="@+id/t_teamA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
         android:text="@string/teama"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/mUround" />
 
     <TextView
         android:id="@+id/t_teamB"
@@ -218,7 +193,7 @@
         android:id="@+id/t_round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="44dp"
         android:text="@string/round"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -227,28 +202,13 @@
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/mUteamA"
         android:layout_width="213dp"
         android:layout_height="35dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/tournament_name"
         android:inputType="textPersonName"
-        android:text="Bracket"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t_bracket" />
-
-    <EditText
-        android:id="@+id/mUteamA"
-        android:layout_width="213dp"
-        android:layout_height="35dp"
-        android:ems="10"
-        android:hint="@string/tournament_name"
-        android:inputType="textPersonName"
-        android:text="Bracket"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.377"
@@ -263,7 +223,6 @@
         android:ems="10"
         android:hint="@string/tournament_name"
         android:inputType="textPersonName"
-        android:text="Bracket"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -288,8 +247,8 @@
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:ems="10"
+        android:hint="@string/round"
         android:inputType="textPersonName"
-        android:text="Round"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.205"
@@ -300,12 +259,13 @@
         android:id="@+id/TV_teamAScore"
         android:layout_width="101dp"
         android:layout_height="36dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/team_a_scores"
+        android:text="0"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.205"
+        app:layout_constraintHorizontal_bias="0.232"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mUteamA" />
 
@@ -313,12 +273,13 @@
         android:id="@+id/TV_teamBScore2"
         android:layout_width="101dp"
         android:layout_height="36dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/team_b_scores"
+        android:text="0"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.232"
+        app:layout_constraintHorizontal_bias="0.246"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mUteamB" />
 
@@ -329,18 +290,10 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="@string/select_date_and_time"
         android:inputType="date"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t_startdateandtime" />
-
-    <EditText
-        android:id="@+id/editTextTime2"
-        android:layout_width="139dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:inputType="time"
-        app:layout_constraintBaseline_toBaselineOf="@+id/mUtime"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
