--- a/app/src/main/res/layout/retrieve_match_layout.xml
+++ b/app/src/main/res/layout/retrieve_match_layout.xml
@@ -6,17 +6,6 @@
     android:layout_marginStart="25dp"
     android:layout_margin="20dp">
 
-<Button
-    android:id="@+id/Btn_edit_match"
-    android:layout_width="76dp"
-    android:layout_height="33dp"
-    android:layout_marginStart="135dp"
-    android:layout_marginTop="85dp"
-    android:backgroundTint="@color/grey"
-    android:onClick="match_org_update"
-    android:text="@string/edit"
-    android:textSize="10sp"
-   />
 
 <!--<ImageView-->
 <!--    android:id="@+id/match3_team1_img"-->
@@ -26,13 +15,36 @@
 <!--    android:layout_marginTop="10dp"-->
 <!--     />-->
 
-<TextView
+    <Button
+        android:id="@+id/btn_edit_match"
+        android:layout_width="76dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="85dp"
+        android:backgroundTint="@color/grey"
+        android:onClick="match_org_update"
+        android:text="@string/edit"
+        android:textSize="10sp" />
+    <Button
+        android:id="@+id/btn_dlt_match"
+        android:layout_width="76dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="165dp"
+        android:layout_marginTop="85dp"
+        android:backgroundTint="@color/grey"
+        android:onClick="match_org_update"
+        android:text="@string/delete"
+        android:textSize="10sp" />
+
+    <TextView
     android:id="@+id/teamA"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="20dp"
     android:layout_marginTop="100dp"
-    android:text="@string/legends" />
+    android:text="@string/legends"
+    android:clickable="true"
+        />
 
 <!--<ImageView-->
 <!--    android:id="@+id/match3_team2_img"-->
